--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 						<p id="lexEntryLabel" class="lexEntryLabel"></p>
 
 						<p class="lexEntry" id="lexEntry"></p>
+						<p id="entryStats"></p>
 
 					</div> <!-- id="lexEntryContainerDiv_urn:cite2…" -->
 
